Fix PPN lapper steder hvor Livets sluttfase-vilkåret ikke ble med (#6901)